<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
<!--    <parent>
        <groupId>nf329</groupId>
        <artifactId>tpcw</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>-->
    <groupId>inf329</groupId>
    <artifactId>tpcw-servlet</artifactId>
    <packaging>war</packaging>
    <version>0.0</version>

    <name>tpcw-servlet</name>
    <url>http://maven.apache.org</url>
    <properties>
        <myJbossHome>${project.build.directory}/jboss-6.1.0.Final</myJbossHome>
        <myConfig>default</myConfig>
    </properties>
    <dependencies>
    	<!-- [START servlet] -->
	    <dependency>
	      <groupId>javax.servlet</groupId>
	      <artifactId>javax.servlet-api</artifactId>
	      <version>3.1.0</version>
	      <type>jar</type>
	      <scope>provided</scope>
		</dependency>
        
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4.1212.jre7</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>populate_images</include>
                    <include>server.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <warName>servlet</warName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>conf</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${myJbossHome}/server/${myConfig}/conf</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>target/classes/conf</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>install</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${myJbossHome}/server/${myConfig}/deploy</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>target/classes/deploy</directory>
                                    <filtering>false</filtering>
                                </resource>
                                <resource>
                                    <directory>target</directory>
                                    <includes>
                                        <include>servlet.war</include>
                                    </includes>
                                </resource>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <include>jboss-logging.xml</include>
                                        <include>jboss-ds.xml</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    
                    <execution>
                        <id>deployers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${myJbossHome}/server/${myConfig}/deployers</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>target/classes/deployers</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bin</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${myJbossHome}/bin</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>target/classes/bin</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.1</version>
                <executions>
                    <execution>
                        <id>copy-jboss</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.jbossas</groupId>
                                    <artifactId>jboss-as-distribution</artifactId>
                                    <version>6.1.0.Final</version>
                                    <type>zip</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.postgresql</groupId>
                                    <artifactId>postgresql</artifactId>
                                    <version>9.4.1212.jre7</version>
                                    <outputDirectory>${myJbossHome}/server/${myConfig}/lib</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>

                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <executions>
                    <!--                    <execution>
                        <id>clean</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>make</executable>
                            <arguments>
                                <argument>-C</argument>
                                <argument>${basedir}/../ImgGen/ImgFiles</argument>
                                <argument>clean</argument>
                            </arguments>
                        </configuration>
                    </execution>-->
                    
                    <!--                    <execution>
                        <id>gera-imagens</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>make</executable>
                            <arguments>
                                <argument>-C</argument>
                                <argument>${basedir}/../ImgGen/ImgFiles</argument>
                            </arguments>
                        </configuration>
                    </execution>--> 
                    <!--                    <execution>
                        <id>delete1</id>
                        <phase>process-test-classes</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>rm</executable>
                            <arguments>
                                <argument>-rf</argument>
                                <argument>${basedir}/src/main/webapp/Images</argument>
                            </arguments>
                        </configuration>
                    </execution>                                       -->
                    <!--                    <execution>
                        <id>mkdir</id>
                        <phase>test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>mkdir</executable>
                            <arguments>
                                <argument>${basedir}/src/main/webapp/Images</argument>
                            </arguments>
                        </configuration>
                    </execution>-->
         
                    <!--                    <execution>
                        <id>script-populate</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>perl</executable>
                            <arguments>
                                <argument>${project.build.directory}/classes/populate_images</argument>
                            </arguments>
                        </configuration>
                    </execution>-->
                    <!--                    <execution>
                        <id>delete</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>rm</executable>
                            <arguments>
                                <argument>-rf</argument>
                                <argument>${basedir}/src/main/webapp/Images</argument>
                            </arguments>
                        </configuration>
                    </execution>-->
                    <execution>
                        <id>script-chmod</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>chmod</executable>
                            <arguments>
                                <argument>700</argument>
                                <argument>-R</argument>
                                <argument>${myJbossHome}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.4.10</version>
                <configuration>
                    <container>
                        <containerId>jboss61x</containerId>
                        <home>${myJbossHome}</home>
                    </container>
                    <configuration>
                        <type>existing</type>
                        <home>${myJbossHome}/server/all</home>
                        <properties>
                            <cargo.jboss.configuration>all</cargo.jboss.configuration>
                            <cargo.jboss.profile>all</cargo.jboss.profile>
                            <cargo.jvmargs>-server -Xms${Xms} -Xmx${Xmx} -XX:PermSize=${PermSize} -XX:MaxPermSize=${MaxPermSize} -Dsun.rmi.dgc.client.gcInterval=600000 -Dsun.rmi.dgc.server.gcInterval=600000 -Djava.net.preferIPv4Stack=true</cargo.jvmargs>
                        </properties>
                    </configuration>
                </configuration>
                <executions>
                    <execution>
                        <id>pre-integration-test</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-integration-test</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>8.1.16.v20140903</version>
                <goals>run-forked</goals>
                <configuration>
                    <webAppSourceDirectory>${basedir}/target/${project.name}-${project.version}</webAppSourceDirectory>
                    <webApp>
                        <contextPath>/servlet</contextPath>
                    </webApp>
                    <contextPath>/servlet</contextPath>
                    <jvmArgs>-Xms512m -Xmx1g</jvmArgs>
                    <stopPort>9191</stopPort>
                    <stopKey>jetty</stopKey>
                    <reload>manual</reload>
                    <systemProperties>
                        <systemProperty>
                            <name>java.security.auth.login.config</name>
                            <value>${basedir}/src/main/setup/login.conf</value>
                        </systemProperty>
                        <systemProperty>
                            <name>slf4j</name>
                            <value>false</value>
                        </systemProperty> 
                        <systemProperty>
                            <name>log4j.configuration</name>
                            <value>${basedir}/src/main/setup/log4j.properties</value>
                        </systemProperty>                        
                    </systemProperties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-jcl</artifactId>
                        <version>1.0.1</version>
                        <type>jar</type>
                    </dependency>
                    <dependency>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                        <version>1.2.13</version>
                        <type>jar</type>
                    </dependency>
                    <dependency>
                        <groupId>org.eclipse.jetty</groupId>
                        <artifactId>jetty-util</artifactId>
                        <version>8.1.16.v20140903</version>
                        <type>jar</type>
                    </dependency>

                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <!--                    <serverXml>${basedir}/src/main/resources/server.xml</serverXml>-->
                    <path>/servlet</path>
                </configuration>
            </plugin>
            
        </plugins>
    </build>

</project>